--- a/client/style/style.css
+++ b/client/style/style.css
@@ -5,7 +5,7 @@ body, .wrapper {
 
 .wrapper {
   display: flex;  
-  flex-flow: row wrap;
+  flex-flow: column wrap;
   font-weight: bold;
   text-align: center;
 }
